k8s/Hosped-users/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hosped-users
  namespace: default
  labels:
    app: hosped-users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hosped-users
  template:
    metadata:
      labels:
        app: hosped-users
    spec:
      containers:
        - name: hosped-users
          image: samuelgislon/hosped-users:latest
          ports:
            - containerPort: 8085
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 10
