k8s/Hosped-users/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hosped-users-service
  namespace: default
spec:
  selector:
    app: hosped-users
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
