k8s/Hosped-users/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosped-users-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: users.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hosped-users-service
                port:
                  number: 8085
